tests/sumo/output/vtypeprobe/errors/file_missing/errors.sumo
Error: Attribute 'file' is missing in definition of vTypeProbe 'test1'.
Quitting (on error).
